--- a/dotnet/src/server/ECharge.EventSourcing.EventStore/ECharge.EventSourcing.EventStore.csproj
+++ b/dotnet/src/server/ECharge.EventSourcing.EventStore/ECharge.EventSourcing.EventStore.csproj
@@ -5,9 +5,16 @@
         <RootNamespace>ECharge.EventSourcing.EventStore</RootNamespace>
         <LangVersion>default</LangVersion>
     </PropertyGroup>
+    <PropertyGroup>
+        <RestoreSources>
+            $(RestoreSources);
+            https://api.nuget.org/v3/index.json;
+            https://nuget.pkg.github.com/EventStore/index.json;
+        </RestoreSources>
+    </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Autofac" Version="6.2.0" />
-        <PackageReference Include="EventStore.Client.Grpc.Streams" Version="21.2.0" />
+        <PackageReference Include="EventStore.Client.Grpc.Streams" Version="21.2.1-alpha.0.15" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
     </ItemGroup>
     <ItemGroup>
